# slashagents

./: .epic2-progress.md  .epic4-progress.md  .gitignore  .markdown-link-check.json  .markdownlint.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VALIDATION.md  check_files.sh  epic-4-validation-checklist.md  pyproject.toml  test_ac24.sh  test_debug.sh
.github/: PULL_REQUEST_TEMPLATE.md
agents/: api-test-fixer.md  chrome-browser-executor.md  ci-strategy-analyst.md  code-quality-analyzer.md  database-test-fixer.md  digdeep.md  e2e-test-fixer.md  import-error-fixer.md  linting-fixer.md  parallel-executor.md  parallel-orchestrator.md  playwright-browser-executor.md  pr-workflow-manager.md  safe-refactor.md  security-scanner.md  test-strategy-analyst.md  type-error-fixer.md  unit-test-fixer.md
commands/: ci-orchestrate.md  code-quality.md  commit-orchestrate.md  coverage.md  epic-dev-epic-end-tests.md  epic-dev-full.md  epic-dev-init.md  epic-dev.md  nextsession.md  parallelize-agents.md  parallelize.md  pr.md  test-orchestrate.md  user-testing.md  usertestgates.md
docs/: SELF_HOSTED_RUNNERS.md
plugin/: .mcp.json  MCP_SETUP.md  hooks.json  plugin.json
scripts/: ci-local.sh  runner-health-check.sh
skills/: pr-workflow.md
tests/: 2-1-REVIEW-SUMMARY.txt  2-1-TEST-QUALITY-REVIEW.md  2-1-test-quality-review.json  2-2-QUALITY-REVIEW-SUMMARY.txt  2-2-TEST-QUALITY-REVIEW.md  2-2-test-quality-review.json  2-3-QUALITY-REVIEW-SUMMARY.txt  2-3-TEST-QUALITY-REVIEW.md  2-3-test-quality-review.json  2-4-QUALITY-REVIEW-SUMMARY.txt  2-4-TEST-QUALITY-REVIEW.md  (+7 more)
(+101 files in other folders)
