[project]
name = "cc-agents-commands-tests"
version = "1.0.0"
description = "Documentation validation tests for CC_Agents_Commands"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
